@@ -159,6 +159,7 @@ pbPost <- function(type=c("note", "link", "file"),
             }
        }
     }
+    if (debug) cat("dest is: ", dest, "\n")
 
     pburl <- "https://api.pushbullet.com/v2/pushes"
 
@@ -208,7 +209,7 @@ pbPost <- function(type=c("note", "link", "file"),
             if (d==0)
                 tgt <- list() # if zero, then use all devices
             else
-                tgt <-  list(target_device_iden=devices[[d]]) # otherwise given specific device
+                tgt <- list(target_device_iden=devices[[d]]) # otherwise given specific device
          } else {                        # fallback, should not get reached
             tgt <- list()
         }
